--- a/index.html
+++ b/index.html
@@ -22,40 +22,41 @@
       </aside>
 
       <main class="main-content">
-        <header class="stats-header">
-          <div class="header-left">
-            <h1 id="page-title">Genel Bakış</h1>
-            <p id="page-subtitle">Koleksiyon durumunu yönet.</p>
-          </div>
+        <div class="sticky-header">
+          <header class="stats-header">
+            <div class="header-left">
+              <h1 id="page-title">Genel Bakış</h1>
+              <p id="page-subtitle">Koleksiyon durumunu yönet.</p>
+            </div>
 
-          <div class="stats-cards">
-            <div class="stat-card">
-              <span class="stat-label">Toplam Model</span>
-              <span class="stat-value" id="total-count">0</span>
+            <div class="stats-cards">
+              <div class="stat-card">
+                <span class="stat-label">Toplam Model</span>
+                <span class="stat-value" id="total-count">0</span>
+              </div>
+              <div class="stat-card highlight">
+                <span class="stat-label">Sahip Olduğum</span>
+                <span class="stat-value" id="owned-count">0</span>
+              </div>
+              <div class="stat-card">
+                <span class="stat-label">Tamamlanma</span>
+                <span class="stat-value" id="completion-rate">%0</span>
+              </div>
             </div>
-            <div class="stat-card highlight">
-              <span class="stat-label">Sahip Olduğum</span>
-              <span class="stat-value" id="owned-count">0</span>
-            </div>
-            <div class="stat-card">
-              <span class="stat-label">Tamamlanma</span>
-              <span class="stat-value" id="completion-rate">%0</span>
-            </div>
-          </div>
-        </header>
+          </header>
 
-        <div class="view-controls">
-          <button class="btn active" id="btn-all" onclick="showAllModels()">
-            Tüm Modeller
-          </button>
-          <button class="btn" id="btn-owned" onclick="showMyCollection()">
-            Garajım
-          </button>
-          <button class="btn outline" id="btn-missing" onclick="showMissing()">
-            Eksikler
-          </button>
+          <div class="view-controls">
+            <button id="btn-all" class="btn active" onclick="showAllModels()">
+              Tüm Modeller
+            </button>
+            <button id="btn-owned" class="btn" onclick="showMyCollection()">
+              Garajım
+            </button>
+            <button id="btn-missing" class="btn" onclick="showMissing()">
+              Eksikler
+            </button>
+          </div>
         </div>
-
         <div id="car-grid" class="car-grid"></div>
       </main>
     </div>
@@ -66,5 +67,64 @@
     <script>
       lucide.createIcons();
     </script>
+    <button class="fab-btn" onclick="openAddModal()">
+      <svg
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="3"
+      >
+        <line x1="12" y1="5" x2="12" y2="19"></line>
+        <line x1="5" y1="12" x2="19" y2="12"></line>
+      </svg>
+    </button>
+
+    <div id="addModal" class="modal-overlay">
+      <div class="modal-content">
+        <h2>Yeni Araç Ekle</h2>
+
+        <div class="input-group">
+          <label>Üretici (Örn: Greenlight, Tarmac)</label>
+          <input
+            type="text"
+            id="inp-maker"
+            placeholder="Marka Grubunu Yaz..."
+          />
+        </div>
+
+        <div class="input-group">
+          <label>Marka (Örn: Nissan, Ford)</label>
+          <input type="text" id="inp-brand" placeholder="Araç Markası..." />
+        </div>
+
+        <div class="input-group">
+          <label>Model Adı</label>
+          <input type="text" id="inp-model" placeholder="Modeli Tam Yaz..." />
+        </div>
+
+        <div class="input-group-row">
+          <div class="input-group">
+            <label>Yıl</label>
+            <input type="number" id="inp-year" value="2026" />
+          </div>
+          <div class="input-group">
+            <label>Renk</label>
+            <input type="text" id="inp-color" placeholder="Renk..." />
+          </div>
+        </div>
+
+        <div class="input-group">
+          <label>Seri (Opsiyonel)</label>
+          <input type="text" id="inp-series" placeholder="Hangi Seri?" />
+        </div>
+
+        <div class="modal-actions">
+          <button class="btn-cancel" onclick="closeAddModal()">İptal</button>
+          <button class="btn-save" onclick="saveNewCar()">KAYDET</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
