Implement fully responsive mobile design and sidebar toggle

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="sticky-header">
           <header class="stats-header">
             <div class="header-left">
+              <button class="mobile-menu-btn" onclick="toggleSidebar()">
+                <i data-lucide="menu"></i>
+              </button>
               <h1 id="page-title">Genel Bakış</h1>
               <p id="page-subtitle">Koleksiyon durumunu yönet.</p>
             </div>
